--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "boxicons": "^2.1.4",
     "primevue": "^3.39.0",
     "vue": "^3.3.4",
